# alkanes

./: .gitignore  CMakeLists.txt  README.md
src/: alkane.cpp  alkane.h  conformations.cpp  conformations.h  generator.cpp  generator.h  main.cpp  vectord.cpp  vectord.h
